--- a/functions/package.json
+++ b/functions/package.json
@@ -14,14 +14,14 @@
   },
   "main": "index.js",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1",
-    "stripe": "^8.156.0"
+    "stripe": "^8.160.0"
   },
   "devDependencies": {
-    "eslint": "^7.6.0",
+    "@babel/core": "^7.14.6",
+    "@babel/eslint-parser": "^7.14.7",
+    "eslint": "^7.30.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^0.2.0"
   },
